fun-apps/mini-k8s-project/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-worker
spec:
  replicas: 3  # Scale horizontally for parallel job processing
  selector:
    matchLabels:
      app: image-worker
  template:
    metadata:
      labels:
        app: image-worker
    spec:
      containers:
      - name: worker
        image: my-image-worker:v3
        imagePullPolicy: Never  # <--- IMPORTANT: Tells K8s "Don't look online, use the local image we just built"
        command: ["/bin/sh", "-c"]
        args: ["python /app/worker.py"]

        resources:
          requests:
            memory: "128Mi"  # Minimum RAM needed to start
            cpu: "250m"      # 250 millicores (1/4 of a CPU core)
          limits:
            memory: "512Mi"  # Kill the pod if it exceeds this
            cpu: "500m"      # Throttles the pod if it tries to use more than 1/2 core
        
        # --- CONFIGURATION ---
